--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    cost_curve = list(map(lambda ))"
+    "    cost_curve = list(map(lambda x_value: ))"
    ]
   },
   {
