--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,8 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    cost_curve = list(map(lambda x_value: residual_sum_squares(x_values, y_values, m, b), x_values))"
+    "    cost_curve = list(map(lambda x_value: residual_sum_squares(x_values, y_values, m, b), x_values))\n",
+    "    return {}"
    ]
   },
   {
