--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    cost_curve = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m, b), x_values))\n",
+    "    cost_curve = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_val, b), m_values))\n",
     "    return {'m_values': }"
    ]
   },
