--- a/index.ipynb
+++ b/index.ipynb
@@ -632,7 +632,7 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    changed_m = -learning_rate"
+    "    changed_m = -m*learning_rate"
    ]
   },
   {
