--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    changed_m = -m*learning_rate*cost_curve_slope\n",
-    "    return changed_m"
+    "    return changed_m+m"
    ]
   },
   {
@@ -645,9 +645,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.357978655333154"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "current_slope = slope_at(budgets, revenues, 1.7, 133.33333333333326)['slope']\n",
     "updated_m(1.7, .000001, current_slope)\n",
