Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -625,14 +625,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    changed_m = -m*learning_rate*cost_curve_slope\n",
+    "    changed_m = -1*m*learning_rate*cost_curve_slope\n",
     "    return changed_m+m"
    ]
   },
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "1.357978655333154"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
