--- a/index.ipynb
+++ b/index.ipynb
@@ -637,6 +637,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4183309666669666"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_slope = slope_at(budgets, revenues, 1.7, 133.33333333333326)['slope']\n",
+    "updated_m(1.7, .000001, current_slope)\n",
+    "# 1.5343123333335096"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
