--- a/index.ipynb
+++ b/index.ipynb
@@ -712,7 +712,8 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
-    "    for i in"
+    "    for i in range(steps):\n",
+    "        current_cost_slo"
    ]
   },
   {
