Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -714,7 +714,8 @@
     "    cost_curve = []\n",
     "    for i in range(steps):\n",
     "        current_cost_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
-    "        current_rss = rss_values(x_values, y_values,, b)"
+    "        current_rss = rss_values(x_values, y_values, current_m, b)\n",
+    "        cost_curve.append"
    ]
   },
   {
