--- a/index.ipynb
+++ b/index.ipynb
@@ -715,6 +715,7 @@
     "    for i in range(steps):\n",
     "        current_cost_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "        current_rss = rss_values(x_values, y_values, current_m, b)\n",
+    "        curren\n",
     "        cost_curve.append({'current_m': current_m, 'rss': current_rss, 'slope': current_cost_slope})"
    ]
   },
